[package]
name = "pxsol-spl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.9.1"
solana-program = "1.18.26"
spl-associated-token-account = { version="2.0.0", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "0.7.0", features = [ "no-entrypoint" ] }
