[package]
name = "pxsol-spl"
version = "0.1.0"
edition = "2021"

[features]
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
spl-associated-token-account = { version="2.3", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "1.0", features = [ "no-entrypoint" ] }
